Introduce server response tracker invocation strategy discrimination